Make deferred rollup operations even safer by consolidating logic for when a Rollup is queued, batched, or run synchronously. Added additional scripts to aid in testing within sandboxes which contain more than just Rollup's tests.

--- a/rollup/core/classes/RollupFullBatchRecalculator.cls
+++ b/rollup/core/classes/RollupFullBatchRecalculator.cls
@@ -32,9 +32,7 @@ public class RollupFullBatchRecalculator extends Rollup {
      * being batched, even if the inner class is just extending the functionality of its
      * parent class
      */
-    Rollup roll = this.getDelegatedRollup(this.rollupInfo, calcItems, new Map<Id, SObject>(calcItems));
-    roll.isFullRecalc = true;
-    roll.runCalc();
+    this.processDelegatedFullRecalcRollup(this.rollupInfo, calcItems, new Map<Id, SObject>(calcItems));
   }
 
   public override void finish(Database.BatchableContext bc) {
